RESOLVED FIXED235978
Flaky scope.assertNoException() assertion in ~JSExecState when running workers WPT tests
https://bugs.webkit.org/show_bug.cgi?id=235978
Summary Flaky scope.assertNoException() assertion in ~JSExecState when running worker...
Chris Dumez
Reported 2022-02-01 14:54:50 PST
Flaky scope.assertNoException() assertion in ~JSExecState when running workers WPT tests: Thread 8 Crashed:: WebCore: SharedWorker 0 JavaScriptCore 0x27fca827e WTFCrash + 14 1 WebCore 0x293d64baa JSC::ExceptionScope::assertNoException() + 122 (ExceptionScope.h:55) 2 WebCore 0x296198305 WebCore::JSExecState::~JSExecState() + 325 (JSExecState.h:149) 3 WebCore 0x2961980e5 WebCore::JSExecState::~JSExecState() + 21 (JSExecState.h:133) 4 WebCore 0x296230857 WebCore::JSExecState::loadModule(JSC::JSGlobalObject&, JSC::SourceCode const&, JSC::JSValue) + 71 (JSExecState.h:105) 5 WebCore 0x2986d80fa WebCore::WorkerOrWorkletScriptController::loadModuleSynchronously(WebCore::WorkerScriptFetcher&, WebCore::ScriptSourceCode const&) + 234 (WorkerOrWorkletScriptController.cpp:286) 6 WebCore 0x298706045 WebCore::WorkerThread::evaluateScriptIfNecessary(WTF::String&) + 741 (WorkerThread.cpp:150) 7 WebCore 0x2986dbff3 WebCore::WorkerOrWorkletThread::workerOrWorkletThread() + 723 (WorkerOrWorkletThread.cpp:175) 8 WebCore 0x2987170e8 WebCore::WorkerThread::createThread()::$_4::operator()() const + 24 (WorkerThread.cpp:121) 9 WebCore 0x298717089 WTF::Detail::CallableWrapper<WebCore::WorkerThread::createThread()::$_4, void>::call() + 25 (Function.h:53) 10 JavaScriptCore 0x27fcd1c02 WTF::Function<void ()>::operator()() const + 130 11 JavaScriptCore 0x27fd97538 WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) + 408 12 JavaScriptCore 0x27fda3175 WTF::wtfThreadEntryPoint(void*) + 21 13 libsystem_pthread.dylib 0x7ff80dad64f4 _pthread_start + 125 14 libsystem_pthread.dylib 0x7ff80dad200f thread_start + 15
Attachments
Patch (3.45 KB, patch)
2022-02-01 14:57 PST, Chris Dumez
mark.lam: review+
ews-feeder: commit-queue-
WIP Patch (330.07 KB, patch)
2022-02-01 15:22 PST, Chris Dumez
no flags
proposed patch. (10.27 KB, patch)
2022-02-02 17:13 PST, Mark Lam
ews-feeder: commit-queue-
proposed patch. (10.22 KB, patch)
2022-02-02 17:47 PST, Mark Lam
no flags
Chris Dumez
Comment 1 2022-02-01 14:57:52 PST
Mark Lam
Comment 2 2022-02-01 14:58:49 PST
Comment on attachment 450571 [details] Patch r=me
Chris Dumez
Comment 3 2022-02-01 15:22:29 PST
Created attachment 450580 [details] WIP Patch
Mark Lam
Comment 4 2022-02-02 17:13:21 PST
Created attachment 450719 [details] proposed patch.
Mark Lam
Comment 5 2022-02-02 17:47:23 PST
Created attachment 450723 [details] proposed patch.
Yusuke Suzuki
Comment 6 2022-02-02 18:17:46 PST
Comment on attachment 450723 [details] proposed patch. r=me
EWS
Comment 7 2022-02-03 08:39:51 PST
Committed r289057 (246764@main): <https://commits.webkit.org/246764@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 450723 [details].
Radar WebKit Bug Importer
Comment 8 2022-02-03 08:40:22 PST
Note You need to log in before you can comment on or make changes to this bug.